--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9.11
+FROM python:3.10-alpine
 WORKDIR /app
 COPY requirements/backend.in /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
