--- a/python/requirements/backend.in
+++ b/python/requirements/backend.in
@@ -1,4 +1,18 @@
-fastapi
-pydantic
-starlette
-uvicorn[standard]
+fastapi==0.95.0
+pydantic==1.10.7
+starlette==0.26.1
+uvicorn==0.21.1
+websockets==10.4
+watchfiles==0.19.0
+typing_extensions==4.5.0
+sniffio==1.3.0
+setuptools==58.1.0
+PyYAML==6.0
+idna==3.4
+httptools==0.5.0
+h11==0.14.0
+colorama==0.4.6
+click==8.1.3
+anyio==3.6.2
+python-dotenv==1.0.0
+numpy==1.24.2
