--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -5,8 +5,8 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 go build -ldflags '-extldflags "-static"' -o build/fizzbuzz
 
-FROM scratch
+FROM gcr.io/distroless/base
 COPY --from=builder /app/build/fizzbuzz /fizzbuzz
-COPY --from=builder /app/templates /templates
+COPY --from=builder /app/templates/ /templates/
 EXPOSE 8080
 CMD ["/fizzbuzz", "serve"]
